--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -7,6 +7,8 @@ OTB-v.3.0.0 - Changes since version 2.8.0 (2009/05/11)
 
   - Improve Feature Extraction: add new textures, new radiometric indexes and add MeanShift capabilities 
   - Improve Land Cover Map: add textures and radiometric indexes
+
+  - Previous Application Visualisation Refactoring: FeatureExtraction, ImageViewer.
  
 * Library
   The library includes these additions
@@ -30,7 +32,7 @@ OTB-v.3.0.0 - Changes since version 2.8.0 (2009/05/11)
   - Fixed some problems under Visual and Cygwin platforms.
 
 * Distribution
-  - Distribution of Windows binaries packages installation for OTB-Application (OTB-Applciations-3.0.0-win32.exe) 
+  - Distribution of Windows binaries packages installation for OTB-Application (OTB-Applications-3.0.0-win32.exe) 
   - Distribution of Windows binaries packages for GDAL library 1.6.0 for MSVC V71 and MSVC V80 compiler
     (http://www.orfeo-toolbox.org/packages) 
 
