--- a/I18n/otb-fr.po
+++ b/I18n/otb-fr.po
@@ -1,4 +1,4 @@
-# translation of otb-fr.po to Francais
+# translation of otb-fr.po to
 # French translations for PACKAGE package.
 # Copyright (C) 2009 THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
@@ -9,15 +9,14 @@ msgstr ""
 "Project-Id-Version: otb-fr\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-09-16 12:53+0800\n"
-"PO-Revision-Date: 2009-09-16 12:52+0800\n"
-"Last-Translator: Emmanuel Christophe <emmanuel.christophe@orfeo-toolbox."
-"org>\n"
-"Language-Team: American English <kde-i18n-doc@kde.org>\n"
+"PO-Revision-Date: 2009-10-19 09:10+0200\n"
+"Last-Translator: Emmanuel Christophe\n"
+"Language-Team:  <en@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Generator: Lokalize 1.0\n"
+"X-Generator: KBabel 1.11.4\n"
 
 #: ChangeDetection/otbInteractiveChangeDetectionGUI.cxx:65
 #: Classification/otbSupervisedClassificationAppliGUI.cxx:107
@@ -628,7 +627,7 @@ msgstr ""
 
 #: Classification/otbSupervisedClassificationAppliGUI.cxx:563
 msgid "Validate"
-msgstr ""
+msgstr "Validation"
 
 #: Classification/otbSupervisedClassificationAppliGUI.cxx:564
 msgid "Display some quality assesment on the classification"
@@ -1000,7 +999,7 @@ msgstr ""
 
 #: Classification/otbSupervisedClassificationAppliGUI.cxx:1001
 msgid "Confusion matrix"
-msgstr ""
+msgstr "Matrice de confusion"
 
 #: Classification/otbSupervisedClassificationAppliGUI.cxx:1008
 msgid "Accuracy"
@@ -1805,8 +1804,7 @@ msgid "Number of iterations"
 msgstr ""
 
 #: FineRegistrationApplication/otbFineRegistrationApplicationViewGroup.cxx:223
-msgid ""
-"Allows you to tune the number of iterations of the registration algorithm"
+msgid "Allows you to tune the number of iterations of the registration algorithm"
 msgstr ""
 
 #: FineRegistrationApplication/otbFineRegistrationApplicationViewGroup.cxx:232
@@ -3882,8 +3880,7 @@ msgid "Tolerance"
 msgstr ""
 
 #: RoadExtraction/otbRoadExtractionViewGroup.cxx:361
-msgid ""
-"Set the tolerance for segment consistency (tolerance in terms of distance)"
+msgid "Set the tolerance for segment consistency (tolerance in terms of distance)"
 msgstr ""
 
 #: RoadExtraction/otbRoadExtractionViewGroup.cxx:373
@@ -4593,36 +4590,3 @@ msgstr "Image 1"
 msgid "Second"
 msgstr ""
 
-#, fuzzy
-#~ msgid "FixedImage"
-#~ msgstr "Ouvrir Image"
-
-#~ msgid "Open images"
-#~ msgstr "Ouvrir images"
-
-#, fuzzy
-#~ msgid "Image:"
-#~ msgstr "Ouvrir Image"
-
-#~ msgid "Exit"
-#~ msgstr "Quitter"
-
-#~ msgid "Open Image"
-#~ msgstr "Ouvrir Image"
-
-#~ msgid "Close Image"
-#~ msgstr "Fermer Image"
-
-#~ msgid "Red Channel Index:"
-#~ msgstr "Index du canal rouge"
-
-#~ msgid "Green Channel Index:"
-#~ msgstr "Index du canal vert:"
-
-#, fuzzy
-#~ msgid "Open Image Pair"
-#~ msgstr "Ouvrir Image"
-
-#, fuzzy
-#~ msgid "Open Images"
-#~ msgstr "Ouvrir Image"
